src/test/error/tuple2.lns
{
   let val1, val2 = (= 1); // error
}
